--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .nav-bar {
-  background: linear-gradient(-90deg, #84CF6A, #16C0B0);
+  background: linear-gradient(-90deg, #6caa57, #16C0B0);
   height: 60px;
   margin-bottom: 15px;
 }
